# mangify

./: .env.example  pyproject.toml
src/: app.py  database.py  security.py  settings.py
src/auth/: authorization.py
src/auth/models/: user_model.conf
src/auth/policies/: user_policy.csv
src/routers/: auth.py  mangas.py  users.py
src/schemas/: base.py  mangas.py  users.py
tests/: conftest.py  test_app.py  test_auth.py  test_database.py  test_mangas.py  test_security.py  test_users.py
